# app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  railway.toml
docs/: Cost Analysis.xlsx  codebase-audit-2026-07-18.md  customer-discovery-template.md  fundraising-bootstrap-notes.md  model-selection.md  new-pre-color-fix-backup.excalidraw  new-pre-stage3-backup.excalidraw  new.excalidraw  pilot-template.md  (+2 more)
services/paper-classifier/: README.md  pyproject.toml
services/paper-classifier/evaluation/: annotation.schema.json  annotations-v1.jsonl  sample-v1.jsonl  sample.schema.json
services/paper-classifier/src/paper_classifier/: __init__.py  corpus.py  easa_importer.py  evaluation.py  extractor.py  failure_modes.py  fmea_ris_classifier.py  fmea_supabase_exporter.py  full_text.py  keywords.py  llm.py  main.py  models.py  pdf_worker.py  reasoning.py  repository.py
services/paper-classifier/tests/: test_candidate_leasing.py  test_evaluation.py  test_extractor.py  test_failure_mode_search.py  test_full_text.py  test_observability.py  test_pipeline_hygiene.py  test_reasoning.py  test_removed_evidence_contracts.py  test_taxonomy_linking.py
services/paper-classifier/tests/fixtures/: reasoning_input.json
services/paper-discovery/: README.md  pyproject.toml
services/paper-discovery/data/: journals.json  queries.json
services/paper-discovery/data/ris/: turbofan-engine.ris
services/paper-discovery/src/paper_discovery/: __init__.py  dedupe.py  journals.py  main.py  models.py  queries.py  repository.py
services/paper-discovery/src/paper_discovery/sources/: __init__.py  crossref.py  openalex.py
services/paper-discovery/tests/: test_cli.py  test_dedupe.py  test_oa_backfill.py  test_observability.py  test_openalex.py  test_repository.py
(+164 files in other folders)
