[project]
name = "riskonradar-paper-discovery"
version = "0.1.0"
description = "Lightweight paper discovery service for Risk on Radar."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
paper-discovery = "paper_discovery.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_discovery"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
